--- a/lib/blog_new_web/templates/layout/root.html.heex
+++ b/lib/blog_new_web/templates/layout/root.html.heex
@@ -10,21 +10,16 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <header>
-      <section class="container">
-        <nav>
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-          </ul>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
-    </header>
-    <%= @inner_content %>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Meu blog</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="#">Bem vindo</a></li>
+          <li><a href="#">Postar</a></li>
+          <li><a href="#">Posts</a></li>
+        </ul>
+      </div>
+    </nav>
+  <%= @inner_content %>
   </body>
 </html>
