entendendo com e html elixir

--- a/lib/blog_new_web/templates/post/show.html.eex
+++ b/lib/blog_new_web/templates/post/show.html.eex
@@ -1,7 +1,15 @@
-<ul class="collection with-header">
-    <li class="collection-header">
-        <h4>Post</h4>
-    </li>
-    <li><%= @post.title %></li>
-    <li><%= @post.description %></li>
-</ul>
+<h2>Post</h2>
+<div class="card hoverable">
+    <div class="card-content">
+        <p class="grey-text right">Postado em: <%= @post.updated_at %> </p>
+        <h5><%= @post.title %></h5>
+        <p class="grey-text text-darken-2">
+            <%= @post.description %>
+        </p>
+        <%= link to: Routes.page_path(@conn, :index), class: "btn-floating left waves-effect" do %>
+            <i class="material-icons">chevron_left</i>
+        <% end %>
+
+        </a>
+    </div>
+</div>
