--- a/lib/blog_new_web/templates/post/new.html.eex
+++ b/lib/blog_new_web/templates/post/new.html.eex
@@ -1,10 +1,27 @@
-<h2>New Post</h2>
-<div class="card hoverable">
-    <div class="card-content">
-        <p class="grey-text right"></p>
-        <h5>Title</h5>
-        <p class="grey-text text-darken-2">
+<div class="row">
+    <div class="col s12">
+        <%= form_for @changeset, Routes.post_path(@conn, :create), fn f -> %>
+            <div class="row">
+                <div class="input-field col s12">
+                    <%= label f, :title, for: "title"  %>
+                    <%= text_input f, :title, id: "title", class: "validate" %>
+                    <span class="helper-text" data-error= "wrong" data-success="right">
+                        <%= error_tag f, :title %>
+                    </span>
+                </div>
+            </div>
 
-        </p>
+            <div class="row">
+                <div class="input-field col s12">
+                    <%= label f, :description, for: "description"  %>
+                    <%= textarea f, :description, id: "description", class: "materialize-textarea" %>
+                    <span class="helper-text" data-error= "wrong" data-success="right">
+                        <%= error_tag f, :description %>
+                    </span>
+                </div>
+            </div>
+
+            <%= submit "Salvar", class: "btn waves-effect waves-light" %>
+        <% end %>
     </div>
 </div>
