delete post, inicio update post

--- a/lib/blog_new_web/templates/post/index.html.eex
+++ b/lib/blog_new_web/templates/post/index.html.eex
@@ -5,15 +5,16 @@
     <%= for post <- @posts do %>
     <li class="collection-item">
         <div><%= post.title %>
-            <a href="#!" class="secondary-content">
-                <i class="material-icons red-text">delete</i>
-            </a>
-            <a href="#!" class="secondary-content">
+            <%= link to: Routes.post_path(@conn, :delete, post), method: :delete, data: [confirm: "Tem certeza?"], class: "secondary-content" do %>
+                 <i class="material-icons red-text">delete</i>
+            <% end %>
+
+            <%= link to: Routes.post_path(@conn, :edit, post), class: "secondary-content" do %>
                 <i class="material-icons green-text">edit</i>
-            </a>
+            <% end %>
+
             <%= link to: Routes.post_path(@conn, :show, post), class: "secondary-content" do %>
-            <i class="material-icons blue-text">send</i>
-            </a>
+                <i class="material-icons blue-text">send</i>
             <% end %>
         </div>
     </li>
