--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,10 @@
 @import "./phoenix.css";
 @import "../node_modules/materialize-css/dist/css/materialize.min";
 
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
 /* Alerts and form errors used by phx.new */
 .alert {
   padding: 15px;
